force-app/main/default/objects/LINE_Conversation__c/LINE_Conversation__c.object-meta.xml
<CustomObject>
    <description
  >Conversation between one LINE user and one LINE OA. Owned by the OA's assigned rep (or the fallback owner); OWD Private drives visibility. Linked to a Contact once identified.</description>
    <label>LINE Conversation</label>
    <nameField>
        <label>LINE Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LINE Conversations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>