force-app/main/default/objects/LINE_Conversation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >The Contact this LINE user is linked to. Blank until linked (invite code, auto-link or manual link).</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LINE Conversations</relationshipLabel>
    <relationshipName>LINE_Conversations</relationshipName>
    <type>Lookup</type>
</CustomField>