force-app/main/default/objects/LINE_Conversation__c/fields/Last_Message_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_At__c</fullName>
    <description
  >Time of the latest message in either direction. Sorts the inbox.</description>
    <label>Last Message At</label>
    <type>DateTime</type>
</CustomField>