force-app/main/default/objects/LINE_Conversation__c/fields/Last_Message_Preview__c.field-meta.xml
<CustomField>
    <fullName>Last_Message_Preview__c</fullName>
    <description
  >Short preview of the latest message for the inbox.</description>
    <label>Last Message Preview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>