force-app/main/default/objects/LINE_Conversation__c/fields/LINE_OA_Configuration__c.field-meta.xml
<CustomField>
    <fullName>LINE_OA_Configuration__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >The LINE OA this conversation belongs to. A lookup, not master-detail, so the conversation keeps its own Private sharing.</description>
    <label>LINE OA Configuration</label>
    <referenceTo>LINE_OA_Configuration__c</referenceTo>
    <relationshipLabel>LINE Conversations</relationshipLabel>
    <relationshipName>LINE_Conversations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>