force-app/main/default/objects/LINE_Conversation__c/fields/LINE_User_Id__c.field-meta.xml
<CustomField>
    <fullName>LINE_User_Id__c</fullName>
    <description
  >The customer's LINE user ID (source.userId from the webhook).</description>
    <label>LINE User ID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>