force-app/main/default/objects/LINE_Conversation__c/fields/Picture_Url__c.field-meta.xml
<CustomField>
    <fullName>Picture_Url__c</fullName>
    <description
  >The customer's LINE profile picture URL (from the profile API).</description>
    <label>Picture URL</label>
    <type>Url</type>
</CustomField>