force-app/main/default/objects/LINE_Conversation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description
  >Following after a follow event; Unfollowed after the customer blocks or removes the OA.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Following</fullName>
            </value>
            <value>
                <fullName>Unfollowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>