force-app/main/default/objects/LINE_Conversation__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description
  >&lt;Channel_Id__c&gt;:&lt;LINE_User_Id__c&gt;. Upsert key: one conversation per LINE user per OA.</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>