force-app/main/default/objects/LINE_Conversation__c/fields/Unread_Count__c.field-meta.xml
<CustomField>
    <fullName>Unread_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Inbound messages not yet read by the owner. +1 per inbound message; reset when the rep opens the chat.</description>
    <label>Unread Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>