force-app/main/default/objects/LINE_Conversation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>LINE_OA_Configuration__c</columns>
    <columns>Status__c</columns>
    <columns>Unread_Count__c</columns>
    <columns>Last_Message_At__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>